Fri Aug 15 14:20:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBuddyList.cpp:
	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Clicking the New IM button now brings up a dialog.

Fri Aug 15 14:03:03 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/new-chat.png:
	* data/images/new-im.png:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* gaim.pro:
	  - The Send/New IM and Open/New Chat icons now have a happy little
	    magic star on the side of them when the action is to create a
	    new IM or chat.

Fri Aug 15 13:42:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Added idle times to the buddy list.

Fri Aug 15 13:26:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Double-clicking a chat in the buddy list now joins the chat.

Fri Aug 15 13:21:39 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Chats in the buddy list now get icons.

Fri Aug 15 13:19:15 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Added the Add Chat dialog.

Fri Aug 15 03:23:27 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added a timer to save the buddy list after 2 seconds when one or
	    more groups are expanded or collapsed. This prevents a buddy list
	    write every time the group is expanded or collapsed, which was
	    slow and wasteful.

Fri Aug 15 03:08:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The account button in the conversations window now longer shows
	    its state as active.
	  - Removed old stuff that's not needed anymore.

Fri Aug 15 02:53:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
